# autodealer-wrapper

./: .gitignore  AGENT_REQUIREMENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
autodealer/: connection.py  queryset.py  services.py
autodealer/actions/: employee.py  payment.py
autodealer/domain/: __init__.py  ac_basket.py  ac_basket_group.py  ac_bookmark.py  ac_history.py  accounting_item.py  accounting_tree.py  act_defection.py  act_defection_check.py  action_goods.py  action_goods_nomenclature.py  action_promotion.py  action_works.py  attribute_description.py  attribute_valuelist.py  bank.py  bank_exchange.py  brigade_executor.py  brigade_structure.py  calls_beeline.py  calls_mango.py  calls_mango_record.py  calls_megafon.py  calls_megafon_record.py  calls_novofon.py  calls_register.py  calls_telphin.py  calls_uiscom.py  calls_uiscom_record.py  car_body_type.py  car_brake_type.py  car_engine_type.py  car_fuel_type.py  car_gearbox_type.py  car_tyre.py  card_bonus.py  card_bonus_operation.py  card_discont.py  card_info.py  catalog_link.py  (+247 more)
autodealer/integration/: rocketwash.py
autodealer/tools/: __init__.py  generate_models.py
docs/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_modules/: index.html
docs/api/: actions.html  connection.html  services.html
docs/domains/: client.html  document.html  organization.html  payment.html  service_catalog.html  vehicle.html
source/: conf.py  index.rst  quickstart.rst
source/api/: connection.rst  queryset.rst  (+1 more)
(+18 files in other folders)
